--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About siden</title>
     <link rel="stylesheet" href="styles/about.css" />
+    <link rel="stylesheet" href="styles/fælles.css" />
   </head>
   <body>
     <header></header>
@@ -15,14 +16,15 @@
         <img src="billeder/about_billeder/porteat_blur.png" alt="billede af katrine klinken" />
         <div class="tekst_sprite">
           <h3>Hvem står bag?</h3>
-          <h3>Katrine Klinken er et dedikeret madmenneske – kok, konsulent, skribent, kogebogsforfatter, madlavningslærer og nu også butiksindehaver. Her sælger hun dansk honning og biprodukter fra stort set hele landet. Katrine Klinken har været konsulent for Danmarks Biavlerforening og blev klar over hvor vigtigt det er at sætte fokus på kvalitetshonning og at formidle at honning ikke bare er honning. Det er en stor velsmagende og mangfoldig verden, der kan sammenlignes med vinens verden.</h3>
+          <h3>Katrine Klinken er et dedikeret madmenneske – kok, konsulent, skribent, kogebogsforfatter, madlavningslærer og nu også butiksindehaver. Her sælger hun dansk honning og biprodukter fra stort set hele landet.</h3>
         </div>
       </div>
 
-      <div class="baggrund_container">
+      <div class="andenbaggrund_container">
         <img src="billeder/about_billeder/honning_blur.png" alt="billede af honning" />
-        <div class="tekst_sprite">
-          <h3>honning</h3>
+        <div class="andentekst_sprite">
+          <h3>Butikken i Jægersborggade</h3>
+          <h3>Forårshonning, sommer- og lynghonning smager på hver deres måde af årstidens blomster og biernes arbejde. At holde bier til bestøvning og for at få honning er en ældgammel lokal tradition. Specialbutikken er et vigtigt mellemled, der bringer honning fra biavlere til honningspisere.</h3>
         </div>
       </div>
     </main>
