--- a/shop.html
+++ b/shop.html
@@ -15,17 +15,17 @@
 
       <div class="grid_1-1-1-1">
         <div class="abonnement">
-          <img src="#" alt="abonnemt billede" />
+          <img src="billeder/produktbilleder/abonnment.png" alt="abonnemt billede" />
           <h2>Abonnement</h2>
           <p>Smag mangfoldighed i lokal honning</p>
         </div>
         <div class="honning">
-          <img src="#" alt="honning billede" />
+          <img src="billeder/produktbilleder/honning.png" alt="honning billede" />
           <h2>Honning</h2>
           <p>Opdag en spændende verden af honning</p>
         </div>
         <div class="gaver">
-          <img src="#" alt="gaver billede" />
+          <img src="billeder/produktbilleder/gaver.png" alt="gaver billede" />
           <h2>Gaver</h2>
           <p>Giv en smagfuld gave, jeg rådgiver gerne, pakker og sender</p>
         </div>
@@ -77,7 +77,7 @@
         <div class="produkter">
           <div class="grid_1-1-1">
             <div class="element1">
-              <img src="produktbilleder/flydende-honning.png" alt="flyende honning" />
+              <img src="billeder/produktbilleder/flydende-honning.png" alt="flyende honning" />
               <div class="element2">
                 <h3>Flydende honning fra Søderjylland - 350g</h3>
                 <p>DKK 45,00</p>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="element1">
-              <img src="produktbilleder/foraarshonning.png" alt="forårshonning" />
+              <img src="billeder/produktbilleder/foraarshonning.png" alt="forårshonning" />
               <div class="element2">
                 <h3>Økologisk forårshonning fra Gjøl - 2020 - 335g</h3>
                 <p>DKK 110,00</p>
@@ -95,7 +95,7 @@
             </div>
 
             <div class="element1">
-              <img src="produktbilleder/sommerhonning.png" alt="sommerhonning" />
+              <img src="billeder/produktbilleder/sommerhonning.png" alt="sommerhonning" />
               <div class="element2">
                 <h3>Økologisk sommerhonning fra Gjøl - 2021 - 335g</h3>
                 <p>DKK 110,00</p>
@@ -106,7 +106,7 @@
 
           <div class="grid_1-1-1">
             <div class="element1">
-              <img src="produktbilleder/graesk-kastanjehonning.png" alt="græsk" />
+              <img src="billeder/produktbilleder/graesk-kastanjehonning.png" alt="græsk" />
               <div class="element2">
                 <h3>Flydende græsk kastanjehonning - 400g</h3>
                 <p>DKK 115,00</p>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="element1">
-              <img src="produktbilleder/honning-med-ingefaer.png" alt="honning med ingefær" />
+              <img src="billeder/produktbilleder/honning-med-ingefaer.png" alt="honning med ingefær" />
               <div class="element2">
                 <h3>Honning med ingefær - 250g</h3>
                 <p>DKK 55,00</p>
@@ -124,7 +124,7 @@
             </div>
 
             <div class="element1">
-              <img src="produktbilleder/honning_bybi.png" alt="honning bybi" />
+              <img src="billeder/produktbilleder/honning_bybi.png" alt="honning bybi" />
               <div class="element2">
                 <h3>BiBy, København - 200g</h3>
                 <p>DKK 50,00</p>
@@ -135,7 +135,7 @@
 
           <div class="grid_1-1-1">
             <div class="element1">
-              <img src="produktbilleder/honning_sjoerens.jpeg" alt="honning" />
+              <img src="billeder/produktbilleder/honning_sjoerens.jpeg" alt="honning" />
               <div class="element2">
                 <h3>Sjøgrens økologiske flydende honning - 120g</h3>
                 <p>DKK 50,00</p>
@@ -144,7 +144,7 @@
             </div>
 
             <div class="element1">
-              <img src="produktbilleder/laesoehonning.png" alt="læsø honning" />
+              <img src="billeder/produktbilleder/laesoehonning.png" alt="læsø honning" />
               <div class="element2">
                 <h3>Læsøhonnung fra de brune bier - 225g</h3>
                 <p>DKK 95,00</p>
@@ -153,7 +153,7 @@
             </div>
 
             <div class="element1">
-              <img src="produktbilleder/lynghonning.jpeg" alt="lynghonning" />
+              <img src="billeder/produktbilleder/lynghonning.jpeg" alt="lynghonning" />
               <div class="element2">
                 <h3>Hviids Lynghonning - 125g</h3>
                 <p>DKK 35,00</p>
