--- a/about.html
+++ b/about.html
@@ -9,7 +9,28 @@
     <link rel="stylesheet" href="styles/fælles.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="forside.html">forside</a>
+          </li>
+
+          <li>
+            <a href="shop.html">butikken</a>
+          </li>
+
+          <li>
+            <a href="opskrift.html">opskrifter</a>
+          </li>
+
+          <li>
+            <a href="about.html">om honningbutikken</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <main>
       <h1 class="overskrift">Historien om honning</h1>
       <div class="baggrund_container">
