--- a/forside.html
+++ b/forside.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/forside.css" />
     <link rel="stylesheet" href="styles/fælles.css" />
     <title>forside</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
 
     <article id="animation_4">
-        <div class="animation">
-          <div id="ball" class="ball pattern"></div>
-        </div>
-      </article>
-</body>
+      <div class="animation">
+        <div id="ball" class="ball pattern"></div>
+      </div>
+    </article>
+  </body>
 </html>
+
+<!-- Lame  -->
