mere header og ændrigner i fælles css

--- a/forside.html
+++ b/forside.html
@@ -9,7 +9,27 @@
     <title>forside</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="forside.html">forside</a>
+          </li>
+
+          <li>
+            <a href="shop.html">butikken</a>
+          </li>
+
+          <li>
+            <a href="opskrift.html">opskrifter</a>
+          </li>
+
+          <li>
+            <a href="about.html">om honningbutikken</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <article id="animation_4">
       <div class="animation">
@@ -18,5 +38,3 @@
     </article>
   </body>
 </html>
-
-<!-- Lame  -->
