--- a/opskrift.html
+++ b/opskrift.html
@@ -6,9 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>opskrifter</title>
     <link rel="stylesheet" href="styles/opskrift.css">
+    <link rel="stylesheet" href="styles/fælles.css" />
 </head>
 <body>
-    <header></header>
+        <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="forside.html">forside</a>
+          </li>
+
+          <li>
+            <a href="shop.html">butikken</a>
+          </li>
+
+          <li>
+            <a href="opskrift.html">opskrifter</a>
+          </li>
+
+          <li>
+            <a href="about.html">om honningbutikken</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
 
 
