--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,28 @@
     <title>Shop</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="forside.html">forside</a>
+          </li>
+
+          <li>
+            <a href="shop.html">butikken</a>
+          </li>
+
+          <li>
+            <a href="opskrift.html">opskrifter</a>
+          </li>
+
+          <li>
+            <a href="about.html">om honningbutikken</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <main>
       <h1>Velkommen til Honningbutikken</h1>
 
