--- a/shop.html
+++ b/shop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="styles/shop.css" />
     <link rel="stylesheet" href="styles/fælles.css" />
     <title>Shop</title>
@@ -13,7 +14,7 @@
     <main>
       <h1>Velkommen til Honningbutikken</h1>
 
-      <div class="grid_1-1-1-1">
+      <div class="grid_1-1-1">
         <div class="abonnement">
           <img src="billeder/produktbilleder/abonnment.png" alt="abonnemt billede" />
           <h2>Abonnement</h2>
@@ -28,11 +29,6 @@
           <img src="billeder/produktbilleder/gaver.png" alt="gaver billede" />
           <h2>Gaver</h2>
           <p>Giv en smagfuld gave, jeg rådgiver gerne, pakker og sender</p>
-        </div>
-        <div class="butikken">
-          <img src="#" alt="billede af butikken" />
-          <h2>Besøg butikken</h2>
-          <p>Jeg rådgiver i min fysiske butik på Jærgersborggade</p>
         </div>
       </div>
 
@@ -77,9 +73,9 @@
         <div class="produkter">
           <div class="grid_1-1-1">
             <div class="element1">
-              <img src="billeder/produktbilleder/flydende-honning.png" alt="flyende honning" />
+              <a href="flydende_honning.html"> <img src="billeder/produktbilleder/flydende-honning.png" alt="flyende honning" /></a>
               <div class="element2">
-                <h3>Flydende honning fra Søderjylland - 350g</h3>
+                <p class="p-produkt">Flydende honning fra Søderjylland - 350 g</p>
                 <p>DKK 45,00</p>
                 <button class="kurv">Tilføj til kurv</button>
               </div>
@@ -88,7 +84,7 @@
             <div class="element1">
               <img src="billeder/produktbilleder/foraarshonning.png" alt="forårshonning" />
               <div class="element2">
-                <h3>Økologisk forårshonning fra Gjøl - 2020 - 335g</h3>
+                <p class="p-produkt">Økologisk forårshonning fra Gjøl - 2020 - 335 g</p>
                 <p>DKK 110,00</p>
                 <button class="kurv">Tilføj til kurv</button>
               </div>
@@ -97,7 +93,7 @@
             <div class="element1">
               <img src="billeder/produktbilleder/sommerhonning.png" alt="sommerhonning" />
               <div class="element2">
-                <h3>Økologisk sommerhonning fra Gjøl - 2021 - 335g</h3>
+                <p class="p-produkt">Økologisk sommerhonning fra Gjøl - 2021 - 335 g</p>
                 <p>DKK 110,00</p>
                 <button class="kurv">Tilføj til kurv</button>
               </div>
@@ -108,7 +104,7 @@
             <div class="element1">
               <img src="billeder/produktbilleder/graesk-kastanjehonning.png" alt="græsk" />
               <div class="element2">
-                <h3>Flydende græsk kastanjehonning - 400g</h3>
+                <p class="p-produkt">Flydende græsk kastanjehonning - 400 g</p>
                 <p>DKK 115,00</p>
                 <button class="kurv">Tilføj til kurv</button>
               </div>
@@ -117,7 +113,7 @@
             <div class="element1">
               <img src="billeder/produktbilleder/honning-med-ingefaer.png" alt="honning med ingefær" />
               <div class="element2">
-                <h3>Honning med ingefær - 250g</h3>
+                <p class="p-produkt">Honning med ingefær - 250 g</p>
                 <p>DKK 55,00</p>
                 <button class="kurv">Tilføj til kurv</button>
               </div>
@@ -126,7 +122,7 @@
             <div class="element1">
               <img src="billeder/produktbilleder/honning_bybi.png" alt="honning bybi" />
               <div class="element2">
-                <h3>BiBy, København - 200g</h3>
+                <p class="p-produkt">ByBi, København - 200 g</p>
                 <p>DKK 50,00</p>
                 <button class="kurv">Tilføj til kurv</button>
               </div>
@@ -137,7 +133,7 @@
             <div class="element1">
               <img src="billeder/produktbilleder/honning_sjoerens.jpeg" alt="honning" />
               <div class="element2">
-                <h3>Sjøgrens økologiske flydende honning - 120g</h3>
+                <p class="p-produkt">Sjøgrens økologiske flydende honning - 120 g</p>
                 <p>DKK 50,00</p>
                 <button class="kurv">Tilføj til kurv</button>
               </div>
@@ -146,7 +142,7 @@
             <div class="element1">
               <img src="billeder/produktbilleder/laesoehonning.png" alt="læsø honning" />
               <div class="element2">
-                <h3>Læsøhonnung fra de brune bier - 225g</h3>
+                <p class="p-produkt">Læsøhonnung fra de brune bier - 225 g</p>
                 <p>DKK 95,00</p>
                 <button class="kurv">Tilføj til kurv</button>
               </div>
@@ -155,7 +151,7 @@
             <div class="element1">
               <img src="billeder/produktbilleder/lynghonning.jpeg" alt="lynghonning" />
               <div class="element2">
-                <h3>Hviids Lynghonning - 125g</h3>
+                <p class="p-produkt">Hviids Lynghonning - 125 g</p>
                 <p>DKK 35,00</p>
                 <button class="kurv">Tilføj til kurv</button>
               </div>
