produktsite + fælles css

--- a/flydende_honning.html
+++ b/flydende_honning.html
@@ -9,11 +9,32 @@
     <title>Flydende honning</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="forside.html">forside</a>
+          </li>
+
+          <li>
+            <a href="shop.html">butikken</a>
+          </li>
+
+          <li>
+            <a href="opskrift.html">opskrifter</a>
+          </li>
+
+          <li>
+            <a href="about.html">om honningbutikken</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <h1>Flydende honning fra Sønderjylland - 350 g</h1>
       <div class="grid_1-1">
         <div class="col1">
-          <p>Smag</p>
+          <p>Smag:</p>
           <p>God sødme, smager forfriskende citrus og sirupsagtig med noter af karamel.</p>
           <p>Konsistens:</p>
           <p>Lækker flydende og god cremet konsistens</p>
@@ -22,6 +43,30 @@
         <img src="billeder/produktbilleder/flydende-honning.png" alt="flyende honning" />
       </div>
       <button class="kurv">Tilføj til kurv</button>
+
+      <h1 class="h1_relaterede">Relaterede varer</h1>
+      <div class="grid_1-1-1-1">
+        <div class="col">
+          <img src="billeder/produktbilleder/foraarshonning.png" alt="forår" />
+          <p class="p_text">Økologisk forårshonning fra Gjøl - 2020 - 335 g</p>
+          <p class="p_pris">DKK 110,00</p>
+        </div>
+        <div class="col">
+          <img src="billeder/produktbilleder/honning-med-ingefaer.png" alt="ingefær" />
+          <p class="p_text">Honning med ingefær - 250 g</p>
+          <p class="p_pris">DKK 55,00</p>
+        </div>
+        <div class="col">
+          <img src="billeder/produktbilleder/lynghonning.jpeg" alt="lynghonning" />
+          <p class="p_text">Hviids Lynghonning - 125 g</p>
+          <p class="p_pris">DKK 35,00</p>
+        </div>
+        <div class="col">
+          <img src="billeder/produktbilleder/laesoehonning.png" alt="læsø" />
+          <p class="p_text">Læsøhonnung fra de brune bier - 225 g</p>
+          <p class="p_pris">DKK 95,00</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
