--- a/flydende_honning.html
+++ b/flydende_honning.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="styles/shop.css" />
     <link rel="stylesheet" href="styles/fælles.css" />
     <title>Flydende honning</title>
@@ -34,15 +35,18 @@
       <h1>Flydende honning fra Sønderjylland - 350 g</h1>
       <div class="grid_1-1">
         <div class="col1">
-          <p>Smag:</p>
+          <p class="p_bold">Smag:</p>
           <p>God sødme, smager forfriskende citrus og sirupsagtig med noter af karamel.</p>
-          <p>Konsistens:</p>
-          <p>Lækker flydende og god cremet konsistens</p>
+          <div class="col1">
+            <p class="p_bold">Konsistens:</p>
+            <p>Lækker flydende og god cremet konsistens</p>
+          </div>
           <p>DKK 45,00</p>
+
+          <button class="kurv">Tilføj til kurv</button>
         </div>
         <img src="billeder/produktbilleder/flydende-honning.png" alt="flyende honning" />
       </div>
-      <button class="kurv">Tilføj til kurv</button>
 
       <h1 class="h1_relaterede">Relaterede varer</h1>
       <div class="grid_1-1-1-1">
