--- a/about.html
+++ b/about.html
@@ -12,8 +12,7 @@
   <body>
     <header>
       <div class="header_left">
-        <a href="#"> <img src="billeder/faelles_billeder/logo_v1_test.png" alt="logo honning" /></a>
-        <a href="forside.html">FORSIDE</a>
+        <a href="forside.html"> <img src="billeder/faelles_billeder/logo_v1_test.png" alt="logo honning" /></a>
         <a href="shop.html">BUTIKKEN</a>
         <a href="opskrift.html">OPSKRIFTER</a>
         <a href="about.html">OM BUTIKKEN</a>
