--- a/about.html
+++ b/about.html
@@ -42,7 +42,39 @@
         </div>
       </div>
     </main>
+  <main class="main_3">
+      <hr />
+      <h1>Shop favoritter :</h1>
 
+      <div class="grid_3">
+        <div class="col">
+          <img src="billeder/produktbilleder/flydende-honning.png" alt="flydende honning" height="300px" />
+          <h2>Forårshonning</h2>
+          <h3>honninh klar til sommmer og forår</h3>
+          <p>Gå til produkt >></p>
+        </div>
+        <div class="col">
+          <img src="billeder/produktbilleder/honning-med-ingefaer.png" alt="honning med ingefaer" height="300px" />
+          <h2>Honning med ingefær</h2>
+          <h3>Honning med special smag af ingefær</h3>
+          <p>Gå til produkt >></p>
+        </div>
+
+        <div class="col">
+          <img src="billeder/produktbilleder/sommerhonning.png" alt="sommer honning" height="300px" />
+          <h2>Sommerhonning</h2>
+          <h3>Honning klar til brug om sommeren</h3>
+          <p>Gå til produkt >></p>
+        </div>
+
+        <div class="col">
+          <img src="billeder/produktbilleder/lynghonning.jpeg" alt="lyng honning" />
+          <h2>Lynghonning</h2>
+          <h3>Lynghonnig, god til brug i madretter</h3>
+          <p>Gå til produkt >></p>
+        </div>
+      </div>
+    </main>
     <script src="login.js"></script>
   </body>
   <footer>
