opskrift link til shop

--- a/opskrift.html
+++ b/opskrift.html
@@ -115,8 +115,8 @@
                 <h2>Tilmeld dig et </h2> <h1> Honningabonnement</h1> 
                 <img src="billeder/opskrift_billeder/honningglas.jpeg" alt="slat" height="250px" width="400px">
                 <h3> Hurtig levering fra 39;</h3>
-                <p>Se mit store udvalg af honning</p>
-                
+                  <a href="shop.html">Se mit store udvalg af honning</a>
+             
             </div>
         </div>
     </main>
