--- a/flydende_honning.html
+++ b/flydende_honning.html
@@ -45,21 +45,25 @@
           <img src="billeder/produktbilleder/foraarshonning.png" alt="forår" />
           <p class="p_text">Økologisk forårshonning fra Gjøl - 2020 - 335 g</p>
           <p class="p_pris">DKK 110,00</p>
+          <button class="kurv">Tilføj til kurv</button>
         </div>
         <div class="col">
           <img src="billeder/produktbilleder/honning-med-ingefaer.png" alt="ingefær" />
           <p class="p_text">Honning med ingefær - 250 g</p>
           <p class="p_pris">DKK 55,00</p>
+          <button class="kurv">Tilføj til kurv</button>
         </div>
         <div class="col">
           <img src="billeder/produktbilleder/lynghonning.jpeg" alt="lynghonning" />
           <p class="p_text">Hviids Lynghonning - 125 g</p>
           <p class="p_pris">DKK 35,00</p>
+          <button class="kurv">Tilføj til kurv</button>
         </div>
         <div class="col">
           <img src="billeder/produktbilleder/laesoehonning.png" alt="læsø" />
           <p class="p_text">Læsøhonnung fra de brune bier - 225 g</p>
           <p class="p_pris">DKK 95,00</p>
+          <button class="kurv">Tilføj til kurv</button>
         </div>
       </div>
     </main>
