--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex">
     <title>About siden</title>
     <link rel="stylesheet" href="styles/about.css" />
     <link rel="stylesheet" href="styles/fælles.css" />
@@ -29,7 +30,7 @@
         <img src="billeder/about_billeder/porteat_blur.png" alt="billede af katrine klinken" />
         <div class="tekst_sprite">
           <h3>Hvem står bag?</h3>
-          <h3>Katrine Klinken er et dedikeret madmenneske – kok, konsulent, skribent, kogebogsforfatter, madlavningslærer og nu også butiksindehaver. Her sælger hun dansk honning og biprodukter fra stort set hele landet.</h3>
+          <h3>Katrine Klinken er et dedikeret madmenneske, kok, konsulent, skribent, kogebogsforfatter, madlavningslærer … og nu også butiksindehaver. Her sælger hun dansk honning og biprodukter fra stort set hele landet. Katrine Klinken har været konsulent for Danmarks Biavlerforening og blev klar over hvor vigtigt det er at sætte fokus på kvalitetshonning og at formidle at honning ikke bare er honning. Det er en stor velsmagende og mangfoldig verden, der kan sammenlignes med vinens verden.</h3>
         </div>
       </div>
 
@@ -37,7 +38,7 @@
         <img src="billeder/about_billeder/honning_blur.png" alt="billede af honning" />
         <div class="andentekst_sprite">
           <h3>Butikken i Jægersborggade</h3>
-          <h3>Forårshonning, sommer- og lynghonning smager på hver deres måde af årstidens blomster og biernes arbejde. At holde bier til bestøvning og for at få honning er en ældgammel lokal tradition. Specialbutikken er et vigtigt mellemled, der bringer honning fra biavlere til honningspisere.</h3>
+          <h3>Forårshonning, sommer- og lynghonning smager på hver deres måde af årstidens blomster og biernes arbejde.  Honning er guld fra naturen og elsket fra tidernes morgen. Honning er mere end sødt. Honning kan have både dybde, friskhed og blomstersmage og kan være milde og kraftige. At holde bier til bestøvning og for at få honning er en ældgammel lokal tradition. Specialbutikken er et vigtigt mellemled, der bringer honning fra biavlere til honningspisere. </h3>
         </div>
       </div>
     </main>
