--- a/flydende_honning.html
+++ b/flydende_honning.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/shop.css" />
     <link rel="stylesheet" href="styles/fælles.css" />
     <title>Flydende honning</title>
+    <link rel="shortcut icon" type="image/jpg" href="billeder/faelles_billeder/favicon.ico" />
   </head>
   <body>
     <header>
