--- a/opskrift.html
+++ b/opskrift.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="robots" content="noindex" />
     <title>opskrifter</title>
+    <link rel="shortcut icon" type="image/jpg" href="billeder/faelles_billeder/favicon.ico" />
     <link rel="stylesheet" href="styles/opskrift.css">
     <link rel="stylesheet" href="styles/fælles.css" />
 </head>
