--- a/forside.html
+++ b/forside.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/forside.css" />
     <link rel="stylesheet" href="styles/fælles.css" />
     <title>forside</title>
+    <link rel="shortcut icon" type="image/jpg" href="billeder/faelles_billeder/favicon.ico" />
   </head>
   <body>
     <header>
