--- a/forside.html
+++ b/forside.html
@@ -98,11 +98,11 @@
       </div>
 
       <div class="footer_sociale">
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" /> </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" /> </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" /> </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" /> </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" /> </a>
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" alt="" /> </a>
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" alt="" /> </a>
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" alt="" /> </a>
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" alt="" /> </a>
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png" alt="" /> </a>
       </div>
     </div>
   </footer>
