--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
         <div class="col">
           <img src="billeder/produktbilleder/flydende-honning.png" alt="flydende honning" height="300px" />
           <h2>Forårshonning</h2>
-          <h3>honninh klar til sommmer og forår</h3>
-          <p>Gå til produkt >></p>
+          <h3>Honning klar til sommmer og forår</h3>
+          <a href="flydende_honning.html">Gå til produkt >></a> 
         </div>
         <div class="col">
           <img src="billeder/produktbilleder/honning-med-ingefaer.png" alt="honning med ingefaer" height="300px" />
