--- a/forside.html
+++ b/forside.html
@@ -29,7 +29,7 @@
         <div class="abonnement_text">
           <h1>Honning Abonnement</h1>
           <p>Smag magfoldigheden i honning. Modtag lokal kvalitetshonning hver anden månded året rundt, sammen med Katrine Klinkens opskrifter og inspiration.</p>
-          <button class="btn_mere">Læs mere her</button>
+          <button onclick="abonnement.html">Læs mere her</button>
         </div>
         <div class="abonnement_slide">
           <img class="mySlides" src="billeder/faelles_billeder/honningglas.png" alt="honningglas" />
