--- a/shop.html
+++ b/shop.html
@@ -27,9 +27,9 @@
     <main>
       <h1>Velkommen til Honningbutikken</h1>
 
-      <div class="grid_1-1-1">
+      <div class="grid_1-1-1a">
         <div class="abonnement">
-          <img src="billeder/produktbilleder/abonnment.png" alt="abonnemt billede" />
+         <a href="abonnement.html"><img src="billeder/produktbilleder/abonnment.png" alt="abonnemt billede" /></a> 
           <h2>Abonnement</h2>
           <p>Smag mangfoldighed i lokal honning</p>
         </div>
