--- a/opskrift.html
+++ b/opskrift.html
@@ -112,7 +112,8 @@
                 <img src="billeder/opskrift_billeder/ost2.jpeg" alt="honningmader" height="550">
             </div>
             <div class="col2">
-                <h2>Tilmeld dig et </h2> <h1> Honningabonnement</h1> 
+                <h2>Tilmeld dig et </h2> 
+                <a href="abonnement.html"> Honningabonnement</a>
                 <img src="billeder/opskrift_billeder/honningglas.jpeg" alt="slat" height="250px" width="400px">
                 <h3> Hurtig levering fra 39;</h3>
                   <a href="shop.html">Se mit store udvalg af honning</a>
