--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <a href="shop.html">BUTIKKEN</a>
         <a href="opskrift.html">OPSKRIFTER</a>
         <a href="about.html">OM BUTIKKEN</a>
+        <a href="abonnement.html">ABONNEMENT</a>
       </div>
 
       <div class="header_right">
