--- a/abonnement.html
+++ b/abonnement.html
@@ -10,6 +10,19 @@
     <title>Abonnement</title>
   </head>
   <body>
+    <header>
+      <div class="header_left">
+        <a href="forside.html"> <img src="billeder/faelles_billeder/logo_v1_test.png" alt="logo honning" /></a>
+        <a href="shop.html">BUTIKKEN</a>
+        <a href="opskrift.html">OPSKRIFTER</a>
+        <a href="about.html">OM BUTIKKEN</a>
+        <a href="abonnement.html">ABONNEMENT</a>
+      </div>
+
+      <div class="header_right">
+        <a href="#"><img src="billeder/faelles_billeder/kurv_v1_test.png" alt="kurv" /></a>
+      </div>
+    </header>
     <main>
       <h1>Abonnement</h1>
       <div class="grid_1-1">
