--- a/shop.html
+++ b/shop.html
@@ -17,6 +17,7 @@
         <a href="shop.html">BUTIKKEN</a>
         <a href="opskrift.html">OPSKRIFTER</a>
         <a href="about.html">OM BUTIKKEN</a>
+        <a href="abonnement.html">ABONNEMENT</a>
       </div>
 
       <div class="header_right">
