--- a/abonnement.html
+++ b/abonnement.html
@@ -10,6 +10,20 @@
     <title>Abonnement</title>
   </head>
   <body>
+     <header>
+      <div class="header_left">
+        <a href="forside.html"> <img src="billeder/faelles_billeder/logo_v1_test.png" alt="logo honning" /></a>
+        <a href="shop.html">BUTIKKEN</a>
+        <a href="opskrift.html">OPSKRIFTER</a>
+        <a href="about.html">OM BUTIKKEN</a>
+      </div>
+
+      <div class="header_right">
+        <a href="#"><img src="billeder/faelles_billeder/kurv_v1_test.png" alt="kurv" /></a>
+      </div>
+    </header>
+
+    <main>
     <main>
       <h1>Abonnement</h1>
       <div class="grid_1-1">
@@ -43,4 +57,51 @@
       </div>
     </main>
   </body>
+  <footer>
+    <div class="inner_footer">
+      <div class="footer_logo_container">
+        <img src="billeder/faelles_billeder/logo_v1_test.png" alt="footer logo honning" />
+      </div>
+
+      <div class="footer_third">
+        <h1>kontakt</h1>
+        <h2>butikkens åbningstider:</h2>
+        <p>mandag: xx</p>
+        <p>trisdag: lukket</p>
+        <p>onsdag: xx</p>
+        <p>torsdag: xx</p>
+        <p>fredag: xx</p>
+        <p>lørdag: xx</p>
+        <p>søndag: xx</p> <br></br>
+
+        <p><span>Telefon: </span>+45 12 34 56 78</p>
+
+        <p><span>E-mail:</span> honning.klinkenatxxxx</p>
+      </div>
+
+      <div class="footer_third">
+        <h1>Handelsbetingelser</h1>
+        <a href="">abonnementsvilkår</a>
+        <a href="">Onlinebestilling</a>
+        <a href="">Levering og returnering</a>
+        <a href="">cookie og datapolitik</a>
+      </div>
+
+      <div class="footer_third">
+        <h1>Genveje</h1>
+        <a href="">Køb honning</a>
+        <a href="">Bestil abonnement</a>
+        <a href="">Læs nyhedsbreve</a>
+        <a href="">Ofte stillede spørgsmål</a>
+      </div>
+
+      <div class="footer_sociale">  
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
+        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
+      </div>
+    </div>
+  </footer>
 </html>
