social if footer

--- a/flydende_honning.html
+++ b/flydende_honning.html
@@ -107,12 +107,11 @@
         <a href="">Ofte stillede spørgsmål</a>
       </div>
 
-      <div class="footer_sociale">  
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
+      <div class="footer_third">
+        <h1>Sociale medier og kontakt:</h1>
+        <a href="#"> <img src="billeder/faelles_billeder/facebook.png"> </a>
+        <a href="#"> <img src="billeder/faelles_billeder/instagram.png"> </a>
+        <a href="#"> <img src="billeder/faelles_billeder/youtube.png"> </a>
       </div>
     </div>
   </footer>
