--- a/opskrift.html
+++ b/opskrift.html
@@ -18,6 +18,7 @@
         <a href="shop.html">BUTIKKEN</a>
         <a href="opskrift.html">OPSKRIFTER</a>
         <a href="about.html">OM BUTIKKEN</a>
+        <a href="abonnement.html">ABONNEMENT</a>
       </div>
 
       <div class="header_right">
@@ -255,12 +256,11 @@
         <a href="">Ofte stillede spørgsmål</a>
       </div>
 
-      <div class="footer_sociale">  
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
-        <a href="#"> <img src="billeder/faelles_billeder/kurv_v1_test.png">   </a>
+      <div class="footer_third">
+        <h1>Sociale medier og kontakt:</h1>
+        <a href="#"> <img src="billeder/faelles_billeder/facebook.png"> </a>
+        <a href="#"> <img src="billeder/faelles_billeder/instagram.png"> </a>
+        <a href="#"> <img src="billeder/faelles_billeder/youtube.png"> </a>
       </div>
     </div>
   </footer>
