--- a/forside.html
+++ b/forside.html
@@ -26,13 +26,10 @@
     </header>
 
     <main>
-      <div class="video_forside">
-        <video controls autoplay loop width="1200">
-          <source src="/billeder/aestetisk_video_v3.mp4" type="video/webm" />
-
-          <source src="/billeder/aestetisk_video_v3.mp4" type="video/mp4" />
-        </video>
-      </div>
+      <video control autoplay>
+        <source src="/billeder/aestetisk_video_v3.mp4" type="video/mp4" />
+        <source src="/billeder/aestetisk_video_v3.mp4" type="video/webm" />
+      </video>
 
       <div class="grid_1-1">
         <div class="abonnement_text">
