--- a/forside.html
+++ b/forside.html
@@ -31,6 +31,11 @@
         <source src="/billeder/aestetisk_video_v3.mp4" type="video/webm" />
       </video>
 
+      <video control loop>
+        <source src="/billeder/aestetisk_video_v3.mp4" type="video/mp4" />
+        <source src="/billeder/aestetisk_video_v3.mp4" type="video/webm" />
+      </video>
+
       <div class="grid_1-1">
         <div class="abonnement_text">
           <h1>Honning Abonnement</h1>
