--- a/forside.html
+++ b/forside.html
@@ -26,12 +26,7 @@
     </header>
 
     <main>
-      <video control autoplay>
-        <source src="/billeder/aestetisk_video_v3.mp4" type="video/mp4" />
-        <source src="/billeder/aestetisk_video_v3.mp4" type="video/webm" />
-      </video>
-
-      <video control loop>
+      <video control autoplay loop>
         <source src="/billeder/aestetisk_video_v3.mp4" type="video/mp4" />
         <source src="/billeder/aestetisk_video_v3.mp4" type="video/webm" />
       </video>
