--- a/flydende_honning.html
+++ b/flydende_honning.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="styles/shop.css" />
     <link rel="stylesheet" href="styles/fælles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Flydende honning</title>
     <link rel="shortcut icon" type="image/jpg" href="billeder/faelles_billeder/favicon.ico" />
   </head>
@@ -22,6 +23,21 @@
 
       <div class="header_right">
         <a href="#"><img src="billeder/faelles_billeder/kurv_v1_test.png" alt="kurv" /></a>
+      </div>
+        <!-- Top Navigation Menu -->
+      <div class="topnav">
+        <a href="forside.html"> <img src="billeder/faelles_billeder/logo_v1_test.png" alt="logo honning" /></a>
+        <!-- Navigation links (hidden by default) -->
+         <div id="myLinks">
+          <a href="shop.html">BUTIKKEN</a>
+          <a href="opskrift.html">OPSKRIFTER</a>
+          <a href="about.html">OM BUTIKKEN</a>
+          <a href="abonnement.html">ABONNEMENT</a>
+        </div>
+        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
       </div>
     </header>
     <main>
