--- a/forside.html
+++ b/forside.html
@@ -32,7 +32,7 @@
         <div id="myLinks">
           <a href="shop.html">BUTIKKEN</a>
           <a href="opskrift.html">OPSKRIFTER</a>
-          <a href="#about">About</a>
+          <a href="about.html">OM BUTIKKEN</a>
           <a href="abonnement.html">ABONNEMENT</a>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
