video link til youtube

--- a/about.html
+++ b/about.html
@@ -52,6 +52,11 @@
           <h3>Katrine Klinken er et dedikeret madmenneske, kok, konsulent, skribent, kogebogsforfatter, madlavningslærer … og nu også butiksindehaver. Her sælger hun dansk honning og biprodukter fra stort set hele landet. Katrine Klinken har været konsulent for Danmarks Biavlerforening og blev klar over hvor vigtigt det er at sætte fokus på kvalitetshonning og at formidle at honning ikke bare er honning. Det er en stor velsmagende og mangfoldig verden, der kan sammenlignes med vinens verden.</h3>
         </div>
       </div>
+<iframe width="420" height="315"
+        src="https://youtu.be/QnYUy5H-gSM">
+        </iframe>
+ 
+     
       
       <div class="andenbaggrund_container">
         <img src="billeder/about_billeder/honning_blur.png" alt="billede af honning" />
